--- a/core-absolute-layout.html
+++ b/core-absolute-layout.html
@@ -7,7 +7,7 @@ license that can be found in the LICENSE file.
 /**
  * @group Polymer Core Elements
  *
- * `<core-absolute-layout>` arranges nodes horizontally via absolution positioning.
+ * `<core-absolute-layout>` arranges nodes horizontally via absolute positioning.
  * Set the `vertical` attribute (boolean) to arrange vertically instead.
  * 
  * `<core-absolute-layout>` arranges it's <b>sibling elements</b>, not
@@ -36,7 +36,7 @@ license that can be found in the LICENSE file.
  *      <div flex>Column Two</div>
  *      <div>Column Three</div>
  *
- *  Remember that `<core-absolute-layout>` arranges it's sibling elements, not it's children.
+ * Remember that `<core-absolute-layout>` arranges it's sibling elements, not it's children.
  *
  * If body has width 52 device pixels (in this case, ascii characters), call that 52px.
  * Column One has it's natural width of 12px (including border), Column Three has it's
@@ -52,7 +52,7 @@ license that can be found in the LICENSE file.
  * As the parent node resizes, the elastic column reacts via CSS to adjust it's size.
  * No javascript is used during parent resizing, for best performance. 
  *
- * Changes in content or sibling size is not handled automatically. 
+ * Changes in content or sibling size are not handled automatically. 
  *
  *      ----------------------------------------------------------------
  *      ||Column One|             Column Two             |Column Three||
